# pytorch-license-plate-with-mlops

./: .dvcignore  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  data.dvc  docker-compose.yml  dvc.yaml  params.py  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: mlops-self-hosted.yml  mlops.yml
data/: .gitignore  datasets.dvc
docker/: Dockerfile
kubernetes/: cml-runner.yml
requirements/: requirements-dev.txt  requirements.txt
src/: predict.py  prepare.py  save_stack.py  serve.py  train.py
src/datasets/: licenseplatesdataset.py  swiss_license_plates_dataset.py  swiss_license_plates_ocr_dataset.py
src/generators/: swiss_license_plates_generator.py
src/localize/: evaluate.py  prepare.py  train.py
src/models/: __init__.py  abstract_model.py  cnn_localizer_model.py  cnn_ocr_model.py  resnet50_model.py  vgg16_model.py
src/ocr/: evaluate.py  prepare.py  train.py
src/stack/: evaluate.py  prepare.py
src/utils/: dataset.py  evaluation.py  linalg.py  model.py  preview.py  preview_utils.py  seed.py  train.py
