# -- Poetry -------------------------------------------
[tool.poetry]
name = "pytorch-mlops-license-plate"
version = "0.2.0"
description = "PyTorch MLOps License Plate Recognition"
authors = ["Leonard <leocser632@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
torch = "^2.0.0"
torchvision = "^0.15.1"
torchdata = "^0.6.0"
scipy = "^1.10.1"
opencv-python = "^4.7.0"
tensorboard = "^2.11.2"
dvc = {version = "^2.51.0", extras = ["gs"]}
dvclive = "^2.5.1"
mlem = {version = "^0.4.10", extras = ["fastapi"]}

[tool.poetry.group.dev.dependencies]
# Linting
flake8 = "^5.0.4"
flake8-quotes = "^3.3.1"
flake8-comprehensions = "^3.10.0"
flake8-mutable = "^1.2.0"
flake8-blind-except = "^0.2.1"
flake8-builtins = "^1.5.3"
# Formatting
black = "^22.6.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# -- Black --------------------------------------------
[tool.black]
line-length = 79
exclude = '''
/(
    \.git
  | \.venv
  | \.vscode
)/
'''
[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
